fix(mesh/story): story block misaligned

--- a/packages/mesh/app/story/[id]/_style/article.css
+++ b/packages/mesh/app/story/[id]/_style/article.css
@@ -8,7 +8,8 @@
     background: #f2f2f4;
     border: 1px solid #e5e6e9;
     border-radius: 2px;
-    width: 360px;
+    width: 100%;
+    max-width: 360px;
     padding-top: 16px;
     @media (min-width: 1200px) {
       width: 100%;
@@ -104,10 +105,6 @@
       font-size: 18px;
       line-height: 2;
       color: #212944;
-      @media (max-width: 600px) {
-        margin-left: 20px;
-        margin-right: 20px;
-      }
     }
 
     /* setup inline style */
@@ -259,8 +256,11 @@
     & > section.infobox-block {
       background: #f2f2f4;
       padding: 24px 0;
-      margin-left: 0;
-      margin-right: 0;
+      @media (max-width: 767px) {
+        width: 100vw;
+        margin-left: calc(50% - 50vw);
+      }
+
       & > .title {
         padding: 0 32px;
         position: relative;
@@ -285,9 +285,11 @@
 
     & > table {
       width: 100%;
-      @media (max-width: 600px) {
-        width: calc(100% - 40px);
-      }
+      table-layout: fixed;
+
+      /* @media (max-width: 767px) {
+        width: calc(100vw - 40px);
+      } */
       border-collapse: collapse;
       text-align: center;
       & tr {
@@ -373,8 +375,12 @@
 
     & figure.image-block {
       width: 100%;
-      margin-left: 0;
-      margin-right: 0;
+      @media (max-width: 767px) {
+        position: relative;
+        width: 100vw;
+        margin-left: calc(50% - 50vw);
+      }
+
       & .image-wrapper {
         position: relative;
         height: 375px;
@@ -383,16 +389,31 @@
           height: 400px;
         }
       }
+      & figcaption {
+        margin-top: 8px;
+        color: rgba(127, 132, 147, 1);
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 1.5;
+        padding: 0 20px;
+        @media (min-width: 768px) {
+          padding: 0;
+        }
+      }
     }
 
     & div.video-block {
       width: 100%;
-      margin-left: 0;
-      margin-right: 0;
       aspect-ratio: 100/56;
       display: flex;
       justify-content: center;
       position: relative;
+
+      @media (max-width: 767px) {
+        width: 100vw;
+        margin-left: calc(50% - 50vw);
+      }
+
       & video {
         height: 100%;
       }
@@ -413,8 +434,11 @@
       gap: 12px;
       flex-wrap: wrap;
       position: relative;
-      margin-left: 0;
-      margin-right: 0;
+
+      @media (max-width: 767px) {
+        width: 100vw;
+        margin-left: calc(50% - 50vw);
+      }
 
       @media (min-width: 768px) {
         &.fold {
@@ -605,12 +629,10 @@
       position: relative;
       width: 100vw;
       min-height: 100vh;
-      margin-left: 0;
-      margin-right: 0;
       /* FIXME: apply z-index following project setup */
       z-index: 1000;
       /* FIXME: replace the formula to fit the website */
-      left: calc(50% - 50vw);
+      margin-left: calc(50% - 50vw);
       .background-image {
         position: absolute;
         top: 0;
@@ -695,12 +717,10 @@
       position: relative;
       width: 100vw;
       min-height: 100vh;
-      margin-left: 0;
-      margin-right: 0;
       /* FIXME: apply z-index following project setup */
       z-index: 1000;
       /* FIXME: replace the formula to fit the website */
-      left: calc(50% - 50vw);
+      margin-left: calc(50% - 50vw);
       .background-video {
         position: absolute;
         top: 0;
@@ -787,10 +807,9 @@
 
     & > section.embed-code-block {
       position: relative;
-      margin-left: 0;
-      margin-right: 0;
       @media (max-width: 767px) {
-        padding: 0;
+        width: 100vw;
+        margin-left: calc(50% - 50vw);
       }
 
       & > div.embed {
